--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
           python ./build.py
 
       - name: Copy Binary
-        run: cp ./target/release/rustfish ./rustfish
+        run: python ./copy.py
 
       - name: Self play
         run: python ./build.py --test
